<resources>
    <string name="app_name">Personalized Greeter</string>
    <string name="strPromptQuestion">What is your name?</string>
    <string name="strGetGreeted">Obtain Greeting!</string>
    <string name="strFirstNamePlaceholder">First Name</string>
    <string name="strLastNamePlaceholder">Last Name</string>
    <string name="strTitleNamePlaceholder">Title</string>
    <string name="strGreeting">Hello, %1$s %2$s %3$s!</string>
</resources>
