<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pbuskell.personalizedgreeter.BeGreeted">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/strFirstNamePlaceholder"
        android:ems="10"
        android:id="@+id/edtxtFirstNameField"
        android:layout_below="@+id/txtvwPrompt"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strGetGreeted"
        android:id="@+id/btnGreetMe"
        android:onClick="greetTheUser"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:id="@+id/txtvwGreetingSpace"
        android:layout_marginTop="125dp"
        android:layout_below="@+id/edtxtTitleNameField"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/strPromptQuestion"
        android:id="@+id/txtvwPrompt"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btnGreetMe"
        android:layout_alignEnd="@+id/btnGreetMe" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/strLastNamePlaceholder"
        android:ems="10"
        android:id="@+id/edtxtLastNameField"
        android:layout_below="@+id/edtxtFirstNameField"
        android:layout_alignLeft="@+id/edtxtFirstNameField"
        android:layout_alignStart="@+id/edtxtFirstNameField" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/strTitleNamePlaceholder"
        android:ems="10"
        android:id="@+id/edtxtTitleNameField"
        android:layout_below="@+id/edtxtLastNameField"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
